# prof-correctness

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.action  Dockerfile.analyze_action  LICENSE-3rdparty.csv  NOTICE  README.md  action.yml  correctness_test.go  docker_helpers_test.go  flakiness_test.go  go.mod  go.sum  main.go  pprof_analysis.go  pyproject.toml  run.sh  schema_test.go
.github/: CODEOWNERS
.github/chainguard/: dd-trace-py.github.trigger-ci.sts.yaml  dd-trace-py.gitlab.trigger-ci.sts.yaml
.github/workflows/: ci.yml  downstream-python.yml  test.yml
analysis/: analysis.go  api_test.go  jfr.go  reporter.go
analyze/: action.yml  entrypoint.sh
base_images/: Dockerfile.ddprof-ub-20.04  Dockerfile.python-3.10  Dockerfile.python-3.11  Dockerfile.python-3.11-ddprof  Dockerfile.python-3.11-libdd  Dockerfile.python-3.12  Dockerfile.python-3.13  Dockerfile.python-3.14  Dockerfile.python-3.15
binaries/: README.md
cmd/list-scenarios/: main.go  main_test.go
cmd/make-matrix/: main.go
cmd/prof-analyze/: main.go  main_test.go
profilers/ddprof/: install_profiler.sh  run_ddprof.sh
profilers/php/: install_profiler.sh
reporter/: datadog.go  datadog_test.go  reporter.go
scenarios/broken_adoptopenjdk/: Dockerfile  README.md
scenarios/broken_graal_vm/: Dockerfile  DummyApp.java  README.md  expected_profile.json
scenarios/ddprof_allocations/: CMakeLists.txt  Dockerfile  expected_profile.json  simple_malloc.cc
scenarios/ddprof_clang_pie/: Dockerfile  expected_profile.json  main.c
scenarios/ddprof_go/: Dockerfile  README.md  (+2 more)
(+315 files in other folders)
